# DRL-IV-SP500

./: .flake8  .gitattributes  .gitignore  README.md  VVIX_History.csv  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/: make_paper_figs.py  plot_paper_figs.py  shap_drl.py
cfg/: best_a2c_params.json  best_lstm_params.json  best_ppo_params.json  data_config.yaml  ppo_small.yaml
config/: data_config.yaml
config/tuned/: a2c.json  lstm.json  ppo.json
dev/: build_causal_data.py
econ499/: __init__.py
econ499/baselines/: __init__.py  ar1.py  ffn.py  garch.py  har_rv.py  lstm.py  ols.py  ridge.py
econ499/envs/: __init__.py  iv_env.py
econ499/eval/: __init__.py  evaluate_all.py  (+11 more)
iv_drl/: __init__.py
manuscript/: main.bbl  main.blg  main.tex  references.bib
results/: ar1_oos_predictions.csv  best_a2c_params.json  best_ffn_params.json  best_lstm_params.json  best_ppo_params.json  ensemble_oos_predictions.csv  ffn_oos_predictions.csv  har_rv_oos_predictions.csv  iv_fpca_factors.parquet  iv_surface_daily_features.parquet  lstm_oos_predictions.csv  macro_daily_features.parquet  macro_features_20250613_200840.csv  macro_raw_data_20250613_200840.csv  spx_daily_features.parquet  spx_iv_drl_state.csv
scripts/: generate_pub_assets.py  process_option_data.py  rebuild_all.ps1  rebuild_all.sh  run_ablation.sh  run_baselines.ps1  run_drl.ps1  run_evaluation.ps1  run_features.ps1  run_hpo.ps1  run_robustness.ps1  run_training.ps1  snapshot_best_params.py
tests/: test_ar1.py  test_ffn.py  test_iv_env.py  test_load_zipped_options.py  test_price_features.py
(+4430 files in other folders)
